--- a/estilo_meu.css
+++ b/estilo_meu.css
@@ -13,18 +13,17 @@ h3, h1{
 	color: #FFF8DC;
 }
 #container1{
-	width: 950px;
+	width: 1024px;
   	height: auto;
   	display: flex;
-  	margin: 50px auto;
-	background: #FFF8DC url(../imagens/cor_top.jpg) no-repeat top;
+  	margin: 0 auto;
+	background: #FFF8DC url(../imagens/fundo_bazul_topo.jpg) no-repeat top;
 	border: 1px red solid;
+	
+}
 
-}
-.foto_perfil{
-	margin-top: 200px;
-	border: 1px red solid ;
-}
+
+
 /* inicio config parte superior*/
 .texto_botao{
 	float: left;
@@ -99,3 +98,22 @@ ul{
   
 }
 /*config icones*/
+
+/*container 2*/
+}
+.container2{
+	background-size: 50%;
+	
+	
+}
+	
+
+.foto_perfil ul{
+	padding: 35px 10px 0 80px;
+	display: inline-block;
+	margin: 0;
+
+}
+.dados_pessoal ul{
+	
+}
