--- a/estilo_h.css
+++ b/estilo_h.css
@@ -172,3 +172,14 @@ h1 p{
 #competencia p{
 	color: #000000;
 }
+
+
+/*rodape
+*****************************************************/
+#rodape{
+	background: #6a5acd;
+	clear: both;
+	text-align: center;
+	width: 100%;
+	margin-top: 40px;
+}
